--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "next": "14.2.15",
+    "next-auth": "^4.24.10",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
