--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "i18next": "^23.16.4",
     "next": "14.2.15",
     "next-auth": "^4.24.10",
+    "next-i18next": "^15.3.1",
+    "ni18n": "^1.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-i18next": "^15.1.0",
     "yup": "^1.4.0",
     "zustand": "^5.0.0"
   },
